--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -167,8 +167,8 @@ LoadModule dir_module libexec/apache2/mod_dir.so
 LoadModule alias_module libexec/apache2/mod_alias.so
 LoadModule rewrite_module libexec/apache2/mod_rewrite.so
 #LoadModule php5_module libexec/apache2/libphp5.so
-# LoadModule php5_module /usr/local/Cellar/php53/5.3.29/libexec/apache2/libphp5.so
-LoadModule php5_module /usr/local/Cellar/php55/5.5.21/libexec/apache2/libphp5.so
+#LoadModule php5_module /usr/local/opt/php56/libexec/apache2/libphp5.so
+LoadModule php7_module /usr/local/opt/php70/libexec/apache2/libphp7.so
 #LoadModule hfs_apple_module libexec/apache2/mod_hfs_apple.so
 
 <IfModule unixd_module>
