--- a/apache/apache.conf
+++ b/apache/apache.conf
@@ -1,3 +1,8 @@
+# Load these modules
+# LoadModule vhost_alias_module libexec/apache2/mod_vhost_alias.so
+# LoadModule rewrite_module libexec/apache2/mod_rewrite.so
+# LoadModule php7_module /usr/local/opt/php70/libexec/apache2/libphp7.so
+
 # get the server name from the Host: header
 # NameVirtualHost *:80
 UseCanonicalName Off
@@ -8,9 +13,9 @@ UseCanonicalName Off
   ServerName default
   ServerAlias *.linus
   ServerAlias *.dev
-  VirtualDocumentRoot /Users/linus/Sites/%1/%2+/public_html
+  VirtualDocumentRoot /Users/linus.lundahl/Sites/%1/%2+/public_html
 
-  <Directory "/Users/linus/Sites">
+  <Directory "/Users/linus.lundahl/Sites">
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
     Require all granted
@@ -19,15 +24,15 @@ UseCanonicalName Off
 </VirtualHost>
 
 # include the server name in the filenames used to satisfy requests
-<VirtualHost *:80>
-  ServerName linus.local
-  ServerAlias *.local
-  VirtualDocumentRoot /Users/linus/Sites/%0/public_html
-
-  <Directory "/Users/linus/Sites">
-    Options Indexes FollowSymLinks MultiViews
-    AllowOverride All
-    Require all granted
-    allow from all
-  </Directory>
-</VirtualHost>
+# <VirtualHost *:80>
+#   ServerName linus.local
+#   ServerAlias *.local
+#   VirtualDocumentRoot /Users/linus.lundahl/Sites/%0/public_html
+#
+#   <Directory "/Users/linus.lundahl/Sites">
+#     Options Indexes FollowSymLinks MultiViews
+#     AllowOverride All
+#     Require all granted
+#     allow from all
+#   </Directory>
+# </VirtualHost>
