--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -167,7 +167,6 @@ LoadModule dir_module libexec/apache2/mod_dir.so
 LoadModule alias_module libexec/apache2/mod_alias.so
 LoadModule rewrite_module libexec/apache2/mod_rewrite.so
 #LoadModule php5_module libexec/apache2/libphp5.so
-#LoadModule php5_module /usr/local/opt/php56/libexec/apache2/libphp5.so
 LoadModule php7_module /usr/local/opt/php70/libexec/apache2/libphp7.so
 #LoadModule hfs_apple_module libexec/apache2/mod_hfs_apple.so
 
@@ -270,7 +269,7 @@ DocumentRoot "/Library/WebServer/Documents"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php
 </IfModule>
 
 #
@@ -280,6 +279,10 @@ DocumentRoot "/Library/WebServer/Documents"
 <FilesMatch "^\.([Hh][Tt]|[Dd][Ss]_[Ss])">
     Require all denied
 </FilesMatch>
+
+<FilesMatch .php$>
+     SetHandler application/x-httpd-php
+ </FilesMatch>
 
 #
 # Apple specific filesystem protection.
@@ -499,7 +502,7 @@ Include /private/etc/apache2/extra/httpd-autoindex.conf
 
 # Virtual hosts
 #Include /private/etc/apache2/extra/httpd-vhosts.conf
-Include /Users/linus/dotfiles/apache/apache.conf
+Include /Users/linus.lundahl/dotfiles/apache/apache.conf
 
 # Local access to the Apache HTTP Server Manual
 #Include /private/etc/apache2/extra/httpd-manual.conf
@@ -528,15 +531,3 @@ SSLRandomSeed connect builtin
 </IfModule>
 
 Include /private/etc/apache2/other/*.conf
-
-#
-# uncomment out the below to deal with user agents that deliberately
-# violate open standards by misusing DNT (DNT *must* be a specific
-# end-user choice)
-#
-#<IfModule setenvif_module>
-#BrowserMatch "MSIE 10.0;" bad_DNT
-#</IfModule>
-#<IfModule headers_module>
-#RequestHeader unset DNT env=bad_DNT
-#</IfModule>
