--- a/apache/apache.conf
+++ b/apache/apache.conf
@@ -13,9 +13,9 @@ UseCanonicalName Off
   ServerName default
   ServerAlias *.linus
   ServerAlias *.dev
-  VirtualDocumentRoot /Users/linus.lundahl/Sites/%1/%2+/public_html
+  VirtualDocumentRoot /Users/linus/Sites/%1/%2+/public_html
 
-  <Directory "/Users/linus.lundahl/Sites">
+  <Directory "/Users/linus/Sites">
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
     Require all granted
@@ -27,9 +27,9 @@ UseCanonicalName Off
 # <VirtualHost *:80>
 #   ServerName linus.local
 #   ServerAlias *.local
-#   VirtualDocumentRoot /Users/linus.lundahl/Sites/%0/public_html
+#   VirtualDocumentRoot /Users/linus/Sites/%0/public_html
 #
-#   <Directory "/Users/linus.lundahl/Sites">
+#   <Directory "/Users/linus/Sites">
 #     Options Indexes FollowSymLinks MultiViews
 #     AllowOverride All
 #     Require all granted
