--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -502,7 +502,7 @@ Include /private/etc/apache2/extra/httpd-autoindex.conf
 
 # Virtual hosts
 #Include /private/etc/apache2/extra/httpd-vhosts.conf
-Include /Users/linus.lundahl/dotfiles/apache/apache.conf
+Include /Users/linus/dotfiles/apache/apache.conf
 
 # Local access to the Apache HTTP Server Manual
 #Include /private/etc/apache2/extra/httpd-manual.conf
