Update configs and install script.

--- a/apache/apache.conf
+++ b/apache/apache.conf
@@ -4,18 +4,23 @@
 # LoadModule php7_module /usr/local/opt/php70/libexec/apache2/libphp7.so
 
 # get the server name from the Host: header
-# NameVirtualHost *:80
-UseCanonicalName Off
-# DocumentRoot "/Users/linus/Sites/"
 
 # include the server name in the filenames used to satisfy requests
+# DocumentRoot /Users/linus/Sites
+
 <VirtualHost *:80>
-  ServerName default
+    ServerName localhost
+    DocumentRoot /Users/linus/Sites/personal
+</VirtualHost>
+
+<VirtualHost *:80>
+  UseCanonicalName Off
   ServerAlias *.linus
   ServerAlias *.dev
+  RewriteEngine On
   VirtualDocumentRoot /Users/linus/Sites/%1/%2+/public_html
 
-  <Directory "/Users/linus/Sites">
+  <Directory /Users/linus/Sites>
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
     Require all granted
