Update local apache conf.

--- a/apache/apache.conf
+++ b/apache/apache.conf
@@ -1,15 +1,15 @@
 <VirtualHost *:80>
     ServerName localhost
-    DocumentRoot /Users/linus/Sites/personal
+    DocumentRoot /Users/linus/Projects/personal
 </VirtualHost>
 
 <VirtualHost *:80>
   UseCanonicalName Off
-  ServerAlias *.dev
+  ServerAlias *.test
   RewriteEngine On
-  VirtualDocumentRoot /Users/linus/Sites/%1/%2+/public_html
+  VirtualDocumentRoot /Users/linus/Projects/%1/%2+/public_html
 
-  <Directory /Users/linus/Sites>
+  <Directory /Users/linus/Projects>
     Options Indexes FollowSymLinks MultiViews
     AllowOverride All
     Require all granted
